--- a/CsvUi/MainWindow.xaml
+++ b/CsvUi/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:CsvUi"
         mc:Ignorable="d"
         ThemeMode="Dark"
-        Title="MainWindow" Height="450" Width="800">
+        Title="CsvUi" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
