--- a/CsvUi/MainWindow.xaml
+++ b/CsvUi/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         ThemeMode="Dark"
         Title="CsvUi" Height="450" Width="800">
-    <Grid>
+    <Grid Margin="2">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
