--- a/CsvUi/MainWindow.xaml
+++ b/CsvUi/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CsvUi"
         mc:Ignorable="d"
-        ThemeMode="Dark"
+        Style="{StaticResource {x:Type Window}}"
         Title="CsvUi" Height="450" Width="800">
     <Grid Margin="2">
         <Grid.RowDefinitions>
